feat(ci): add s390x build target and simplify release workflow
- Add s390x architecture to build and package scripts
- Remove GCP publish job (GitHub releases only)
- Create sync-upstream.yml for daily upstream release sync
- Disable codeql, fossa, scan, mergify workflows (upstream handles)
- Fix deprecated ::set-output syntax, update actions to v4

--- a/scripts/build
+++ b/scripts/build
@@ -9,3 +9,4 @@ mkdir -p bin
 [ "$(uname)" != "Darwin" ] && LINKFLAGS="-extldflags -static -s"
 GOARCH=amd64 CGO_ENABLED=0 go build -ldflags "-X main.VERSION=$VERSION $LINKFLAGS" -o bin/docker-machine-driver-harvester-amd64
 GOARCH=arm64 CGO_ENABLED=0 go build -ldflags "-X main.VERSION=$VERSION $LINKFLAGS" -o bin/docker-machine-driver-harvester-arm64
+GOARCH=s390x CGO_ENABLED=0 go build -ldflags "-X main.VERSION=$VERSION $LINKFLAGS" -o bin/docker-machine-driver-harvester-s390x
