--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.tag || github.ref }}
+          fetch-depth: 0
+
+      - name: Use build scripts from master (for s390x support)
+        if: inputs.tag
+        run: |
+          git checkout origin/master -- scripts/build scripts/package
 
       - name: Build
         run: |
